1. Fixed data format isuue and provided dynamic data formatter function. 2. Provided user friendly Title styling features. 3. Changed util constructor for dynamic url path retriving.

--- a/sass/src/Application.scss
+++ b/sass/src/Application.scss
@@ -97,7 +97,7 @@ small {
 }
 .arbelaCard .x-panel-header-default-framed-horizontal .x-tool-after-title {
   top: 6px !important;
- /* margin: 0 0 0 -6px !important;*/
+  //margin: 0 0 0 -6px !important; //new changes Apr28-2016
 }
 .arbelaCard .x-panel-header-default-framed-top {
   padding:0px!important;
